--- a/quizzes/templates/quizzes/index.html
+++ b/quizzes/templates/quizzes/index.html
@@ -19,9 +19,14 @@
                         <a href="/quizzes/{{ quiz.id }}/{{ response.student_id }}">
                             {{ response.student_id }}
                         </a>
+                        {{ response.full_name }}
                     </li>
                     {% endfor %}
                 </ul>
+
+                <a href="{% url 'quizzes:create' quiz_id=quiz.id %}" class="btn btn-primary">
+                    Attempt now
+                </a>
             </li>
         {% endfor %}
         </ul>
