--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-    Welcome to the Campus site. Select an app from the menu in the header.
+    Welcome to the site. Select a tab upside to view the attendance or to take a test
     
 {% endblock %}
